--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <td>Café</td>
         <td>1</td>
         <td>
-            <button class="btn btn-success btn-sm">
+            <button class="btn btn-info btn-sm">
                 +
             </button>
             <button class="btn btn-danger btn-sm">
